@@ -1,3 +1,10 @@
+2008-05-20  Pablo Polvorin <pablo.polvorin@process-one.net>
+	* src/network/exmpp_ssl.erl: Fix compatibility bug with old OTP
+	versions that doesn't allow the reuseaddr option in ssl sockets.
+
+	* src/network/exmpp_ssl.erl: Refactor the code, using exmpp_tcp.erl as
+	a model. 
+
 2008-05-13  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* c_src/exmpp_expat.c, c_src/Makefile.am, c_src/Makefile.unix,
